package domain.enums;

public enum WorkerLevel {
    JUNIOR,
    MID,
    SENIOR
}