@startuml

enum WorkerLevel {
    JUNIOR
    MID
    SENIOR
}

class Worker {
    - String name
    - WorkerLevel level
    - double baseSalary
    # {static} createWorker(String name, WorkerLevel level, double baseSalary)
    # getName()
    # getLevel()
    # getBaseSalary()
    + addContract(Contract c)
    + removeContract(Contract c)
}

class Contract {
    - Date contractDate
    - double valuePerHour
    - int hours
    # {static} createContract(Date date, double valuePerHour, int hours)
    # getHours()
    # getValuePerHour()
    # getDate()
    + getTotalValue()
}

class Department {
    - String name
    # {static} createDepartment(String name)
    # getName()
}

Worker *-- Department
Worker *-- Contract
@enduml
